# pypokemon-wrapper

./: README.md  pyproject.toml  requirements.txt
pkmn_api_wrapper/: api.py  exceptions.py
pkmn_api_wrapper/examples/: basic_usage.py  example.ipynb
pkmn_api_wrapper/models/: base.py  pokemon.py
pkmn_api_wrapper_tests/tests/pokeapi_wrapper/: test_api.py
pkmn_api_wrapper_tests/tests/pokeapi_wrapper/models/: test_models.py
