[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pypokemon_wrapper_santirhbf"
version = "0.0.1"
authors = [
  { name="Santiago Ruiz", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/santirhbf/pypokemon-wrapper"
Issues = "https://github.com/santirhbf/pypokemon-wrapper/issues"